[package]
name = "from-num"
version = "1.1.1"
edition = "2021"
description = "Attribute macro #[from_num(...)]"
license = "MIT"
repository = "https://github.com/ueno-aki/from-num"

[dependencies]
paste = "1.0.14"
seq-macro = "0.3.5"
proc-macro2 = "1.0.69"
syn = "2.0.38"
quote = "1.0.33"
anyhow = "1.0.75"
[lib]
proc-macro = true